# normie

./: README.md  examples.md  notes.md  pyproject.toml
.github/workflows/: doctests_for_normie.yml  normie_publish_prerelease.yml  normie_publish_release.yml  normie_publish_wheels.yml  normie_pull_request_tests.yml  normie_push_tests.yml  poetry-publish.yml  poetry-test.yml  pull_request_tests.yml  push_tests.yml
normie/: README.md  __init__.py  pyproject.toml
normie/compat/: excel.py
normie/normie/alternative/abram_steg/: erf.py
normie/tests/: test_bounds.py  test_simple.py  test_tails.py
normie/tools/: run_tests.py
normie_alternatives/: examples.md  pyproject.toml
resources/implementations/LetsBeRational/: LetsBeRational.i
rootsy/: pyproject.toml
src/: normie.c  normie.h  normie_impl.c
tests/: helpers.py  test_bounds.py  test_excel.py  test_fuzz.py  test_simple.py  test_tails.py
volly/: .gitignore  pyproject.toml
volly/volly/: __init__.py
