[project]
name = "volly"
version = "0.1.0"
description = "Efficient and accurate calculation of implied volatility"
authors = [
    {name = "Jack Grahl",email = "jack.grahl@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "normie (>=0.4.0,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
hypothesis = "^6.124.7"

